--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,15 @@ body {
     width: 900px;
 }
 
+.col-1-3 {
+    width: 40%;
+
+}
+
+.col-2-3 {
+    width: 60%;
+}
+
 
 .container {
     max-width: 1200px;
@@ -43,10 +52,15 @@ body {
     justify-content: center;
 }
 
-.pad {
-    padding: 10px;
+.pad-s {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
+.pad-m {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
 
 .border {
     border: 1px dashed black;
@@ -86,8 +100,15 @@ body {
 
 .bg-pink {
     background-color: pink;
+    height: var(--height);
 }
 
+
+.bg-sky {
+    background-color: dodgerblue;
+    height: var(--height);
+
+}
 
 /********** UTILITIES ************/
 
@@ -99,4 +120,8 @@ nav {
 a {
     text-decoration: none;
     color: black;
+}
+
+p {
+    padding: 10px;
 }
