--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body {
     width: calc(100% / 6);
 }
 
+.col-1-3- {
+    width: calc(100% / 3);
+}
+
 .col-4-6 {
     width: calc(100% / 6*4);
 }
@@ -66,6 +70,9 @@ body {
     border: 1px dashed black;
 }
 
+.w-border {
+    border: 1px dashed white;
+}
 
 .txt-sx {
     text-align: start;
@@ -119,6 +126,23 @@ body {
 .bg-green {
     background-color: green;
     height: 600px;
+}
+
+
+.bg-black {
+    background-color: #23272a;
+    border-bottom: 1px solid white;
+}
+
+
+.bg-salmon {
+    background-color: salmon;
+    height: var(--height)
+}
+
+.bg-turq {
+    background-color: darkturquoise;
+    height: var(--height)
 }
 
 /********** UTILITIES ************/
